[package]
name = "http-client-utils"
version = "0.1.0"
edition = "2024"
description = "A convenient HTTP client library with support for requests, file downloads with progress, and more"
authors = ["Mohtahsim Nawaz"]
license = "MIT"
repository = "https://github.com/mohtashimnawaz/http-utils"
keywords = ["http", "client", "request", "download"]
categories = ["web-programming::http-client"]

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.0"
tokio-util = "0.7"